@@ -228,7 +228,7 @@ namespace MonoDevelop.RegexToolkit
 			tooltipWindow.ShowAll ();
 		}
 			
-		public class CustomTooltipWindow : Gtk.Window
+		public class CustomTooltipWindow : MonoDevelop.Projects.Gui.Completion.TooltipWindow
 		{
 			string tooltip;
 			public string Tooltip {
@@ -242,26 +242,12 @@ namespace MonoDevelop.RegexToolkit
 			}
 			
 			Label label = new Label ();
-			public CustomTooltipWindow () : base (Gtk.WindowType.Popup)
+			public CustomTooltipWindow ()
 			{
-				Name = "gtk-tooltips";
 				label.Xalign = 0;
 				label.Xpad = 3;
 				label.Ypad = 3;
 				Add (label);
-			}
-			
-			protected override bool OnExposeEvent (Gdk.EventExpose ev)
-			{
-				base.OnExposeEvent (ev);
-				Gtk.Requisition req = SizeRequest ();
-				Gtk.Style.PaintFlatBox (this.Style, 
-				                        this.GdkWindow, 
-				                        Gtk.StateType.Normal, 
-				                        Gtk.ShadowType.Out, 
-				                        Gdk.Rectangle.Zero, 
-				                        this, "tooltip", 0, 0, req.Width, req.Height);
-				return true;
 			}
 		}
 		
